--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,5 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Build
-        run: go build -o hello-world
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: hello-world
-          path: hello-world
+      - name: Run hello.go
+        run: go run hello.go
