--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,4 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: 1.18
-
-      - name: Run hello.go
-        run: go run hello.go
+      - run: go run *.go
