--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: build
+name: Run
 on:
   pull_request:
     branches:
@@ -6,7 +6,8 @@ on:
     types: [closed]
 
 jobs:
-  build:
+  Run:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
