--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   Run:
-    if: github.event.pull_request.merged == true
+    if: startsWith(github.head_ref, 'tagpr-from-') == false && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
